BZ 781286 - Fix overlapping H1 with long image names

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -1336,6 +1336,7 @@ header.admin-page-header{
       padding-left: 54px;
       position: relative;
       &:before{ content: ''; position: absolute; left: 12px; width: 27px; height: 100%; background: transparent url('../../images/buildpush_symbols.png') 0px 0px no-repeat; }
+      width: 350px;
     }
   }
 
